# QuakeBlend

./: .gitignore  LICENSE  README.md  blender_manifest.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
quakeblend/: __init__.py
quakeblend/blender/: __init__.py  builder_entities.py  builder_geometry.py  builder_materials.py  exporter_map.py  import_runner_bsp.py  import_runner_map.py  import_runner_wad.py  importer_bsp.py  importer_map.py  importer_wad.py  prefs.py  transaction.py  ui.py
quakeblend/formats/: __init__.py  brushdef3.py  bsp_q1.py  bsp_q2.py  bsp_q3.py  common.py  csg.py  entities.py  map_convert.py  map_q1.py  map_q2.py  map_q3.py  map_writer.py  palette.py  patch.py  wad.py  wal.py
quakeblend/utils/: constants.py  log.py  paths.py
scripts/: blender_smoke.py  build_extension.ps1
tests/: conftest.py  test_architecture.py  test_brushdef3.py  test_bsp_q1.py  test_bsp_q2.py  test_bsp_q3.py  test_common.py  test_csg.py  test_entities.py  test_log.py  test_map_convert.py  test_map_q1.py  test_map_q2.py  test_map_q3.py  test_map_writer.py  test_palette.py  test_patch.py  test_patch_serialize.py  test_paths.py  test_transaction.py  test_wad.py  test_wal.py
