[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quakeblend"
version = "0.1.0"
description = "Blender 5.0+ extension for importing Quake 1/2/3 maps and textures (development tooling only)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
